--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.6",
     "lodash": "^4.17.15",
+    "mongoose": "^5.7.14",
     "nodemon": "^1.19.2"
   }
 }
